add header and logo

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <title>PW Generator</title>
 </head>
 <body>
+    <div class="header">
+        <img src="./img/securekey.png" alt="logo">
+    </div>
     <div class="container">
         <h2>Password Generator</h2>
         <div class="result-container">
